src/deploy/barmanager_service.yml
# Source: bartender/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bartender-dev
  labels:
    helm.sh/chart: bartender-0.1.0
    app.kubernetes.io/name: bartender
    app.kubernetes.io/instance: bartender-dev
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bartender
    app.kubernetes.io/instance: bartender-dev
